updated ERD in notebook

--- a/Design_Database Model_ERD.ipynb
+++ b/Design_Database Model_ERD.ipynb
@@ -619,6 +619,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "465146e4-b6e5-412e-8774-db7ee882efb4",
+   "metadata": {},
+   "source": [
+    "## Display ERD "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "74d7b0e0-cac5-4be4-95e8-1cc3f7866103",
+   "metadata": {},
+   "source": [
+    "![png](Data/movieERD.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "378e18ff-6eb1-4119-9bd5-9995ef3d8b47",
    "metadata": {},
    "source": [
