Created new notebook to insert API results and genres data

--- a/Design_Database Model_ERD.ipynb
+++ b/Design_Database Model_ERD.ipynb
@@ -237,7 +237,7 @@
    "source": [
     "# load cleaned files\n",
     "basic = pd.read_csv('Data/basics.csv')\n",
-    "basic.head(10)\n"
+    "basic.head(10)"
    ]
   },
   {
@@ -653,6 +653,7 @@
     "from sqlalchemy import create_engine\n",
     "from sqlalchemy_utils import database_exists, create_database\n",
     "import pymysql\n",
+    "import json\n",
     "pymysql.install_as_MySQLdb()"
    ]
   },
@@ -661,17 +662,38 @@
    "execution_count": 15,
    "id": "96893535-a2c2-485d-b50f-f36ce54cb99a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['username', 'password'])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "username='root'\n",
-    "password='Sa123685'\n",
-    "connection = f\"mysql+pymysql://{username}:{password}@localhost/movies\"\n",
-    "conn = create_engine(connection)"
+    "with open('/Users/kellyji/.secret/sqllogin.json') as f:\n",
+    "    login = json.load(f)\n",
+    "login.keys()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
+   "id": "de74e4b4-a506-452c-b8a6-ddfa287f8e59",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "connection = f\"mysql+pymysql://{login['username']}:{login['password']}@localhost/movies\"\n",
+    "conn = create_engine(connection)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "id": "de92402c-6965-49f9-9734-cf9880daf1de",
    "metadata": {},
    "outputs": [
@@ -694,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "59af3d2d-2858-4a7a-9603-01ebc57d7fb0",
    "metadata": {},
    "outputs": [
@@ -751,7 +773,7 @@
        "3     title_genres"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1299,7 +1321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "id": "a1479a78-60a2-48b9-863f-576c2fb4de6c",
    "metadata": {},
    "outputs": [
@@ -1371,7 +1393,7 @@
        "2  number_of_votes           int  YES         None      "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1384,7 +1406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "id": "79a4f42d-3772-42b8-82ae-c04ee7eeeaf3",
    "metadata": {},
    "outputs": [
@@ -1394,7 +1416,7 @@
        "array(['tconst', 'average_rating', 'number_of_votes'], dtype=object)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1405,7 +1427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "id": "9fe96006-8ba5-42a6-bb75-29f214018263",
    "metadata": {},
    "outputs": [
@@ -1415,7 +1437,7 @@
        "Index(['tconst', 'averageRating', 'numVotes'], dtype='object')"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1426,7 +1448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "id": "739dff69-4d28-4102-84f1-f7c158bf668a",
    "metadata": {},
    "outputs": [
@@ -1500,7 +1522,7 @@
        "4  tt0096056             5.6              846"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1515,7 +1537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "id": "33bd4d56-d48d-4b9c-ad21-62264e12dc46",
    "metadata": {},
    "outputs": [
@@ -1525,7 +1547,7 @@
        "71900"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1544,7 +1566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "id": "68d191a7-070d-4402-bd6c-fcf14c7a46be",
    "metadata": {},
    "outputs": [
@@ -1601,7 +1623,7 @@
        "3     title_genres"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1613,7 +1635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "id": "225ef2d6-1891-44b6-97d7-0297ad078993",
    "metadata": {},
    "outputs": [
@@ -1695,7 +1717,7 @@
        "3        runtime           int  YES         None      "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1709,7 +1731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "id": "9173bf21-8963-4685-8b11-845d38dd6c94",
    "metadata": {},
    "outputs": [
@@ -1781,7 +1803,7 @@
        "2  number_of_votes           int  YES         None      "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1794,7 +1816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "id": "b029eeab-f3a6-4292-afbd-b4042ace84a8",
    "metadata": {},
    "outputs": [
@@ -1856,7 +1878,7 @@
        "1  genre_name  varchar(45)  YES         None      "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1869,7 +1891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 36,
    "id": "19d99cf0-65d0-45f5-ae91-dd4b16e76415",
    "metadata": {},
    "outputs": [
@@ -1931,7 +1953,7 @@
        "1  genre_id          int   NO  PRI    None      "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1944,7 +1966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 37,
    "id": "b21368f9-f1e8-4658-9bcb-22b157172f15",
    "metadata": {},
    "outputs": [
@@ -2031,7 +2053,7 @@
        "4      126  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2044,7 +2066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 38,
    "id": "58966100-2246-404a-9a95-244674ab2ca1",
    "metadata": {},
    "outputs": [
@@ -2118,7 +2140,7 @@
        "4  tt0096056             5.6              846"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2130,7 +2152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 39,
    "id": "489972c4-6003-4dee-b0d7-87d28b0b7d42",
    "metadata": {},
    "outputs": [
@@ -2170,7 +2192,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2190,7 +2212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 40,
    "id": "18c152f6-5cd9-4fad-9099-bff18f37af5d",
    "metadata": {},
    "outputs": [
@@ -2230,7 +2252,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
