updated notebook and uploaded new sqlscript and ERD model

--- a/Transform and Load.ipynb
+++ b/Transform and Load.ipynb
@@ -2107,7 +2107,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 79,
+   "id": "63bfe640-009f-4dbe-a6bf-c6ebdaf00d3a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tmdb.drop(0, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
    "id": "e0708b09-042c-4f51-97f1-735b3a1f7ab5",
    "metadata": {},
    "outputs": [],
@@ -2117,7 +2127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 81,
    "id": "8462f9f5-cd08-4307-b75f-b3144d4af435",
    "metadata": {},
    "outputs": [],
@@ -2137,17 +2147,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 82,
    "id": "8e153084-8b62-4b88-95e9-8b81996980dc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2655"
+       "2654"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2159,17 +2169,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 83,
    "id": "7aca7040-54df-4371-bf35-0dd7570b737c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x1684ddcc0>"
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x168f6bd00>"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2181,7 +2191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 84,
    "id": "d13d4dc2-8017-45e1-9706-67326a6b7690",
    "metadata": {},
    "outputs": [
@@ -2243,7 +2253,7 @@
        "4        tmdb_data"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2264,7 +2274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 104,
    "id": "30329713-6675-4179-b622-7bff53ca99a6",
    "metadata": {},
    "outputs": [
@@ -2346,7 +2356,7 @@
        "3        runtime           int  YES         None      "
       ]
      },
-     "execution_count": 55,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2359,7 +2369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 103,
    "id": "eb9692de-6464-41b2-82bb-d12058cea9b0",
    "metadata": {},
    "outputs": [
@@ -2431,7 +2441,7 @@
        "2  number_of_votes           int  YES         None      "
       ]
      },
-     "execution_count": 56,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2443,7 +2453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 102,
    "id": "f9450a9c-b76b-4ede-8b68-dc1050a27eb9",
    "metadata": {},
    "outputs": [
@@ -2505,7 +2515,7 @@
        "1  genre_name  varchar(45)  YES         None      "
       ]
      },
-     "execution_count": 58,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2517,7 +2527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 101,
    "id": "1330f7f6-5cf3-4020-b2fc-8f9df177e782",
    "metadata": {},
    "outputs": [
@@ -2579,7 +2589,7 @@
        "1  genre_id          int   NO  PRI    None      "
       ]
      },
-     "execution_count": 76,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2591,7 +2601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 100,
    "id": "d7d3a940-70e7-4f11-a531-4edf94df15fb",
    "metadata": {},
    "outputs": [
@@ -2673,7 +2683,7 @@
        "3  certification  char(11)  YES         None      "
       ]
      },
-     "execution_count": 75,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2685,7 +2695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 99,
    "id": "c6cb5f5c-69f9-4b59-be85-a252aa4ed35d",
    "metadata": {},
    "outputs": [
@@ -2772,7 +2782,7 @@
        "4      126  "
       ]
      },
-     "execution_count": 74,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2785,7 +2795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 98,
    "id": "f0a1162d-03d1-492b-9f71-1d5440818798",
    "metadata": {},
    "outputs": [
@@ -2859,7 +2869,7 @@
        "4  tt0096056             5.6              846"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2871,7 +2881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 97,
    "id": "987e46b0-a1fa-491a-8b8d-2265d82aa9f7",
    "metadata": {},
    "outputs": [
@@ -2939,7 +2949,7 @@
        "4         4  Biography"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2951,7 +2961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 96,
    "id": "04af1655-f6ee-4f99-91a0-870a0b33bf29",
    "metadata": {},
    "outputs": [
@@ -3019,7 +3029,7 @@
        "4  tt0069049         7"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3031,7 +3041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 95,
    "id": "b7218ff1-a707-4399-817e-c995910f0102",
    "metadata": {},
    "outputs": [
@@ -3065,38 +3075,38 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
        "      <td>tt0035423</td>\n",
        "      <td>48000000.0</td>\n",
        "      <td>76019000.0</td>\n",
        "      <td>PG-13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>1</th>\n",
        "      <td>tt0096056</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>2</th>\n",
        "      <td>tt0114447</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>3</th>\n",
        "      <td>tt0116916</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>PG</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>tt0118589</td>\n",
+       "      <td>22000000.0</td>\n",
+       "      <td>5271670.0</td>\n",
+       "      <td>PG-13</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -3104,14 +3114,14 @@
       ],
       "text/plain": [
        "     imdb_id      budget     revenue certification\n",
-       "0          0         NaN         NaN          None\n",
-       "1  tt0035423  48000000.0  76019000.0         PG-13\n",
-       "2  tt0096056         0.0         0.0          None\n",
-       "3  tt0114447         0.0         0.0          None\n",
-       "4  tt0116916         0.0         0.0            PG"
+       "0  tt0035423  48000000.0  76019000.0         PG-13\n",
+       "1  tt0096056         0.0         0.0          None\n",
+       "2  tt0114447         0.0         0.0          None\n",
+       "3  tt0116916         0.0         0.0            PG\n",
+       "4  tt0118589  22000000.0   5271670.0         PG-13"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
